Fixed some broken links in account detail page. Attributes long words now wrap (break-word).

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -80,6 +80,10 @@ attribute-struct {
     font-weight: bold;
   }
 
+  > div {
+    word-break: break-word;
+  }
+
   child-attributes,
   attribute-struct {
     margin-left: 8px;
